--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Node.js Express backend for Time Tracker app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+
   },
   "repository": {
     "type": "git",
